# test-system

./: .env  .env.example  .gitignore  README.md  check.ps1  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start-system.ps1  start.bat  system-utils.ps1
auth/: Dockerfile  go.mod  main.go
auth/cmd/: main.go
auth/migrations/: 001_create_users_collection.js
core/: .dockerignore  Answer.hpp  AnswerService.cpp  AnswerService.hpp  CMakeLists.txt  Database.cpp  Database.hpp  Dockerfile  Question.hpp  QuestionService.cpp  QuestionService.hpp  Test.hpp  TestService.cpp  TestService.hpp  docker-compose.local.yml  docker-compose.yml  init.sql  main.cpp  package.json  schema.sql
core/database/: schema.sql
core/src/: main.cpp
core/src/api/: attempts_handler.cpp
core/src/database/: Database.cpp  Database.hpp
core/src/models/: Answer.hpp  Question.hpp  Test.hpp
core/src/services/: AnswerService.cpp  AnswerService.hpp  QuestionService.cpp  QuestionService.hpp  TestService.cpp  TestService.hpp
core_raw/: docker-compose.yml
core_raw/core-api/: CMakeLists.txt  Dockerfile
core_raw/core-api/src/: main.cpp  main.cpp.backup
database/: init_scripts.sh  mongo-init.js  mongo-schema.md  postgres_schema.sql
database/migrations/: 01_init.sql
docker/: .env-override.example
main_FUTURE/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  start-system.ps1
main_FUTURE/auth/: .air.toml  (+2 more)
nginx/: nginx.conf
telegram-bot/: requirements.txt
web-client/: Dockerfile  index.html  index.js  nginx.conf  package-lock.json  package.json
(+19 files in other folders)
